--- a/NoClippy.csproj
+++ b/NoClippy.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Dalamud.NET.Sdk/13.0.0">
+<Project Sdk="Dalamud.NET.Sdk/14.0.0">
 
     <PropertyGroup>
         <Version>0.5.0.19</Version>
         <Nullable>disable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Update="DalamudPackager" Version="14.0.1" />
+    </ItemGroup>
 
 </Project>
